--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,14 @@
 			<version>2.1.0</version>
 		</dependency>
 
-<!--		<dependency>-->
+		<!-- https://mvnrepository.com/artifact/jakarta.mail/jakarta.mail-api -->
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>jakarta.mail</artifactId>
+			<version>2.0.1</version>
+		</dependency>
+
+		<!--		<dependency>-->
 <!--			<groupId>com.midtrans</groupId>-->
 <!--			<artifactId>java-library</artifactId>-->
 <!--			<version>3.1.4</version>-->
