--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,9 +25,19 @@ spring:
     open-in-view: false
 
 application:
-  payment-gateway:
-    midtrans:
-      merchant-id: G122340993
-      client-key: SB-Mid-client-IkH9QUB3A8t8WLLk
-      server-key: SB-Mid-server-9D9fBs9eVq_N9WFk0ZOZebEO
-      payment-uri: "https://api.sandbox.midtrans.com/v2/charge"
+  external-service:
+    # configure for payment gateway
+    payment-gateway:
+      midtrans:
+        merchant-id: G122340993
+        client-key: SB-Mid-client-IkH9QUB3A8t8WLLk
+        server-key: SB-Mid-server-9D9fBs9eVq_N9WFk0ZOZebEO
+        payment-uri: "https://api.sandbox.midtrans.com/v2/charge"
+    # configure for email gateway
+    email-gateway:
+      mail-dev:
+        hostname: localhost
+        port: 1025
+        username: root
+        password: root
+        sender: payment-platform@testmail.com
