--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/payment_midtrans
-    username: root
-    password: Codespace
+    url: jdbc:mysql://127.0.0.1:3306/payment_midtrans?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Jakarta&useSSL=false&allowPublicKeyRetrieval=true
+    username: yuji
+    password: 53cret
     hikari:
       connection-timeout: 20000
       maximum-pool-size: 5
@@ -20,7 +20,6 @@ spring:
         format_sql: true
         show_sql: true
         # dialect: org.hibernate.dialect.MySQLDialect
-        dialect: org.hibernate.dialect.MySQLDialect
         storage_engine: innodb  # Set the storage engine to InnoDB
     open-in-view: false
 
@@ -36,8 +35,8 @@ application:
     # configure for email gateway
     email-gateway:
       mail-dev:
-        hostname: localhost
-        port: 1025
-        username: root
-        password: root
-        sender: payment-platform@testmail.com
+        hostname: YOUR_SMTP_HOST
+        port: YOUR_SMTP_PORT
+        username: YOUR_SMTP_USERNAME
+        password: YOUR_SMTP_PASSWORD
+        sender: payment-platform@yopmail.com
