--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,20 +10,22 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ main ]
 
 permissions:
   contents: read
-  id-token: write
-  dependency-graph: write
+  security-events: write
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
@@ -32,7 +34,9 @@ jobs:
           cache: maven
 
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
+        run: mvn clean install
 
-      - name: Update dependency graph
+      - name: Submit dependency snapshot
         uses: advanced-security/maven-dependency-submission-action@v4
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
