--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,10 +34,10 @@ jobs:
           cache: maven
 
       - name: Build with Maven
-        run: mvn -B clean install
+        run: ./mvnw -B package --file pom.xml
 
       - name: Submit dependency snapshot
         uses: advanced-security/maven-dependency-submission-action@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          maven-args: "-B -ntp clean install"
+          maven-args: "-B -ntp install"
