--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -36,5 +36,12 @@ jobs:
       - name: Build with Maven
         run: mvn -B package --file pom.xml
 
+      - name: Make Maven Wrapper executable
+        run: chmod +x ./mvnw
+
       - name: Submit dependency snapshot
         uses: advanced-security/maven-dependency-submission-action@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          # Do NOT set ignore-maven-wrapper to true
+          maven-args: "-B -ntp clean install"
