--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Submit dependency snapshot
         uses: advanced-security/maven-dependency-submission-action@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          # Do NOT set ignore-maven-wrapper to true
-          maven-args: "-B -ntp clean install"
+#        with:
+#          token: ${{ secrets.GITHUB_TOKEN }}
+#          # Do NOT set ignore-maven-wrapper to true
+#          maven-args: "-B -ntp clean install"
