--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
 			<version>2.0.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
+			<version>3.0.2</version> <!-- Use the appropriate version -->
+		</dependency>
+
 		<!-- Midtrans (Optional) -->
 		<!--
         <dependency>
