--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
 			<version>9.1.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.zaxxer</groupId>
+			<artifactId>HikariCP</artifactId>
+		</dependency>
+
 		<!-- Lombok -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -69,6 +74,16 @@
 			<version>3.0.2</version> <!-- Use the appropriate version -->
 		</dependency>
 
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator-annotation-processor</artifactId>
+			<scope>provided</scope>
+		</dependency>
 		<!-- Midtrans (Optional) -->
 		<!--
         <dependency>
